@@ -27,8 +27,7 @@
  */
 
 /**
- * 	\class 		ExtraFields
- *	\brief      Class to manage standard extra fields
+ *	Class to manage standard extra fields
  */
 class ExtraFields
 {
@@ -46,11 +45,11 @@ class ExtraFields
 	/**
 	 *	Constructor
 	 *
-	 *  @param		DoliDB		$DB      Database handler
+	 *  @param		DoliDB		$db      Database handler
 	 */
-	function ExtraFields($DB)
+	function ExtraFields($db)
 	{
-		$this->db = $DB ;
+		$this->db = $db;
 		$this->error = array();
 		$this->attribute_type = array();
 		$this->attribute_label = array();
@@ -60,6 +59,7 @@ class ExtraFields
 
     /**
      *  Add a new extra field parameter
+     *
      *  @param  attrname            code of attribute
      *  @param  label               label of attribute
      *  @param  type                Type of attribute ('int', 'text', 'varchar', 'date', 'datehour')
@@ -88,6 +88,7 @@ class ExtraFields
 
 	/**
 	 *	Add a new optionnal attribute
+	 *
 	 *	@param	attrname			code of attribute
 	 *  @param	type				Type of attribute ('int', 'text', 'varchar', 'date', 'datehour')
 	 *  @param	length				Size/length of attribute
@@ -129,6 +130,7 @@ class ExtraFields
 
 	/**
 	 *	Add description of a new optionnal attribute
+	 *
 	 *	@param	attrname			code of attribute
 	 *	@param	label				label of attribute
 	 *  @param	type				Type of attribute ('int', 'text', 'varchar', 'date', 'datehour')
@@ -172,6 +174,7 @@ class ExtraFields
 
 	/**
 	 *	Delete an optionnal attribute
+	 *
 	 *	@param	   attrname			Code of attribute to delete
 	 *  @param     elementtype      Element type ('member', 'product', 'company', ...)
 	 *  @return    int              < 0 if KO, 0 if nothing is done, 1 if OK
@@ -211,6 +214,7 @@ class ExtraFields
 
 	/**
 	 *	Delete description of an optionnal attribute
+	 *
 	 *	@param	attrname			Code of attribute to delete
      *  @param  elementtype         Element type ('member', 'product', 'company', ...)
      *  @return    int              < 0 if KO, 0 if nothing is done, 1 if OK
@@ -246,6 +250,7 @@ class ExtraFields
 
 	/**
 	 * 	Modify type of a personalized attribute
+	 *
 	 *  @param		attrname			name of attribute
 	 *  @param		type				type of attribute
 	 *  @param		length				length of attribute
@@ -288,11 +293,12 @@ class ExtraFields
 
 	/**
 	 *  Modify description of personalized attribute
-	 *  @param	    attrname			name of attribute
-	 *  @param	    label				label of attribute
-     *  @param      type                type of attribute
-     *  @param      length              length of attribute
-     *  @param      elementtype         Element type ('member', 'product', 'company', ...)
+	 *
+	 *  @param	string	$attrname			Name of attribute
+	 *  @param	string	$label				Label of attribute
+     *  @param  string	$type               Type of attribute
+     *  @param  int		$length             Length of attribute
+     *  @param  string	$elementtype		Element type ('member', 'product', 'company', ...)
      */
 	function update_label($attrname,$label,$type,$size,$elementtype='member')
 	{
@@ -350,6 +356,8 @@ class ExtraFields
 
 	/**
 	 *  Load array of labels
+	 *
+	 *  @return	void
 	 */
 	function fetch_optionals()
 	{
@@ -359,6 +367,9 @@ class ExtraFields
 
 	/**
 	 * 	Load array this->attribute_label
+	 *
+	 * 	@param	string		$elementtype		Type of element
+	 * 	@return	array							Array of attributes for all extra fields
 	 */
 	function fetch_name_optionals_label($elementtype='member')
 	{
@@ -429,7 +440,11 @@ class ExtraFields
             if ($showsize > 48) $showsize=48;
         }
 
-	    if ($type == 'varchar')
+		if ($type == 'int')
+        {
+        	$out='<input type="text" name="options_'.$key.'" size="'.$showsize.'" maxlength="'.$size.'" value="'.$value.'"'.($moreparam?$moreparam:'').'>';
+        }
+        else if ($type == 'varchar')
         {
         	$out='<input type="text" name="options_'.$key.'" size="'.$showsize.'" maxlength="'.$size.'" value="'.$value.'"'.($moreparam?$moreparam:'').'>';
         }
@@ -446,8 +461,10 @@ class ExtraFields
 
     /**
      *     Return HTML string to put an output field into a page
-     *     @param      key             Key of attribute
-     *     @param      value           Value to show
+     *
+     *     @param   string	$key            Key of attribute
+     *     @param   string	$value          Value to show
+     *     @return	string					Formated value
      */
     function showOutputField($key,$value,$moreparam='')
     {
