@@ -51,6 +51,8 @@ ErrorPartialFile=File not received completely by server.
 ErrorNoTmpDir=Temporary directy %s does not exists.
 ErrorUploadBlockedByAddon=Upload blocked by a PHP/Apache plugin.
 ErrorFileSizeTooLarge=File size is too large.
+ErrorSizeTooLongForIntType=Size too long for int type (%s digits maximum)
+ErrorSizeTooLongForVarcharType=Size too long for string type (%s chars maximum)
 ErrorFieldCanNotContainSpecialCharacters=Field <b>%s</b> must not contains special characters.
 ErrorNoAccountancyModuleLoaded=No accountancy module activated
 ErrorExportDuplicateProfil=This profil name already exists for this export set.
