@@ -52,6 +52,8 @@ ErrorPartialFile=Fichier non reçu intégralement par le serveur.
 ErrorNoTmpDir=Répertoire temporaire de réception %s inexistant.
 ErrorUploadBlockedByAddon=Upload bloqué par un plugin PHP/Apache.
 ErrorFileSizeTooLarge=La taille du fichier est trop grande.
+ErrorSizeTooLongForIntType=Longueur de champ trop longue pour le type int (%s chiffres maximum)
+ErrorSizeTooLongForVarcharType=Longueur de champ trop longue pour le type chaine (%s caractères maximum)
 ErrorFieldCanNotContainSpecialCharacters=Le champ <b>%s</b> ne peut contenir de caractères spéciaux.
 ErrorNoAccountancyModuleLoaded=Aucun module de comptabilité activé
 ErrorExportDuplicateProfil=Ce nom de profil existe déjà pour ce lot d'export.
